src/objects/Lead_Update_Owner__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Queue_Owner__c</fullName>
        <label>Queue/Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO run in Update mode</description>
        <label>Update?</label>
        <type>Checkbox</type>
    </fields>
    <label>Lead Update Owners</label>
</CustomObject>